--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,17 @@
 #odyp{
-  color: white;
+  color: orangered;
 }
+
+/*
+html,body,header,
+.landing {
+  overflow-x: hidden;
+  height: 100%;
+  scroll-behavior: smooth;
+  font-family: 'Eczar', serif; */
+  
 body{
-  color: aliceblue;
+  color: rgb(8, 156, 5);
   margin: 0;
   padding: 0;
 }
@@ -11,16 +20,31 @@ body{
   color: aliceblue;
 }
 h1{
-  color: whitesmoke;
+  color: orangered ;
   text-align: center;
+  letter-spacing: 10px;
+  font-weight: bolder;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  text-shadow:  6px 6px 5px rgb(8, 156, 5);
 }
+
+
 h2{
   text-align: left;
-  color: yellow;
+  color: orangered;
+}
+
+#overlay{
+  background-color: rgba(0, 0, 0, 0.1);
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  background-blend-mode: lighten;
+  overflow-x: hidden; 
 }
 #card1{
   background-color: thistle;
-  background-image: url(../Images/5\ Outstanding\ Pizza\ Places\ in\ Chicago\ You\ Must\ Try.jpeg);
+  
   background-color: rgba(255,255,255,0.6);
   background-blend-mode: lighten;
     /* You may add things like width, height, background-size... */
