--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,13 @@
   color: orangered;
 }
 
-/*
 html,body,header,
 .landing {
   overflow-x: hidden;
   height: 100%;
   scroll-behavior: smooth;
-  font-family: 'Eczar', serif; */
+  font-family: 'Eczar', serif; 
+}
   
 body{
   color: rgb(8, 156, 5);
@@ -49,9 +49,20 @@ h2{
   background-blend-mode: lighten;
     /* You may add things like width, height, background-size... */
 }
+.text h5{
+  font-size: 25px;
+  padding: 30px;
 #information{
   text-align: center;
   color: yellow;
+}
+
+.order-overlay{
+  background-color: rgba(0, 0, 0, 0.8);
+  margin-left: 2%;
+  margin-right: 2%;
+  padding-bottom: 20px;
+  padding-left: 6%;
 }
 .order{
   background-attachment: fixed;
@@ -62,4 +73,13 @@ h2{
   color: white;
   padding-top: 4%;
   padding-bottom: 4%;
+}
+.choice{
+  display: none;
+  padding-left: 2%;
+  padding-right: 2%;
+  color: aquamarine;
+}td,th{
+  font-size: 20px;
+  color: white;
 }
